--- a/gateway/src/main/resources/bootstrap.properties
+++ b/gateway/src/main/resources/bootstrap.properties
@@ -1,5 +1,8 @@
 server.port=10010
 
+
+spring.main.banner-mode=off
+
 logging.level.cn.itcast=debug
 logging.pattern.dateformat=MM-dd HH:mm:ss:SSS
 
@@ -12,3 +15,12 @@ spring.cloud.gateway.routes[0].predicates=Path=/user/**
 spring.cloud.gateway.routes[1].id=order-service
 spring.cloud.gateway.routes[1].uri=lb://orderservice
 spring.cloud.gateway.routes[1].predicates=Path=/order/**
+
+spring.cloud.gateway.routes[2].id=dish-service
+spring.cloud.gateway.routes[2].uri=lb://dishservice
+spring.cloud.gateway.routes[2].predicates=Path=/dish/**
+
+
+spring.cloud.gateway.routes[3].id=employee-service
+spring.cloud.gateway.routes[3].uri=lb://employeeservice
+spring.cloud.gateway.routes[3].predicates=Path=/employee/**
